--- a/WeatherHistoryViewer.Web/Client/Shared/NavMenu.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/NavMenu.razor
@@ -25,8 +25,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="weatherOfDate">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather of date
+            <NavLink class="nav-link" href="weatherOfDays">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather of days
             </NavLink>
         </li>
         <li class="nav-item px-3">
