--- a/WeatherHistoryViewer.Web/Client/Pages/WeatherPerYear.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/WeatherPerYear.razor
@@ -1,7 +1,9 @@
 ﻿@page "/weatherPerYear"
 @using WeatherHistoryViewer.Core.Models.Weather
+@using WeatherHistoryViewer.Services.Handlers
 @using WeatherHistoryViewer.Core.Models
 @using WeatherHistoryViewer.Services.Helpers
+@inject HttpClient Http
 
 <EditForm Model="@_formResponse" OnValidSubmit="@HandleValidSubmit">
     <DataAnnotationsValidator />
@@ -20,6 +22,24 @@
     <p>
         <em>Loading...</em>
     </p>
+}
+else if (_weatherOfYears.Count == 0)
+{
+    <br />
+    <p>
+        <em>Nothing found! Please try again.</em>
+    </p>
+    <br />
+    <h4>Troubleshooting:</h4>
+    <p>
+        <b>Is your location one of the following?</b>
+    </p>
+    foreach (var location in new LocationHandler().GetAllLocationNames())
+    {
+        <p>
+            <em>@location</em>
+        </p>
+    }
 }
 else
 {
@@ -40,15 +60,16 @@ else
         <tbody>
             @foreach (var year in _weatherOfYears)
             {
-                <tr>
-                    <th>@year.Year</th>
-                    <td>@year.AverageTemp</td>
-                    <td>@year.MaxTemp</td>
-                    <td>@year.DateOfMaxTemp</td>
-                    <td>@year.MinTemp</td>
-                    <td>@year.DateOfMinTemp</td>
-                    <td>@year.AverageSunHours</td>
-                </tr>
+                var backgroundColor = $"hsla({(year.AvgTemp / avgTempMax - 1) * -1 * 240},100%,50%,0.5)";
+            <tr>
+                <th>@year.Year</th>
+                <th style="background-color:@backgroundColor">@year.AvgTemp</th>
+                <td>@year.MaxTemp</td>
+                <td>@year.DateOfMaxTemp</td>
+                <td>@year.MinTemp</td>
+                <td>@year.DateOfMinTemp</td>
+                <td>@year.AvgSunHours</td>
+            </tr>
             }
         </tbody>
     </table>
@@ -58,17 +79,26 @@ else
     private readonly WeatherHelper _weatherHelper = new();
     private readonly DateHelper _dateHelper = new();
 
-    private readonly FormResponse _formResponse = new();
+    private readonly YearFormResponse _formResponse = new();
 
     private List<WeatherOverview> _weatherOfYears;
+    private double avgTempMax = double.NaN;
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        _weatherOfYears = _weatherHelper.GetWeatherOfPastYears("Amsterdam");
+        _weatherOfYears = await Http.GetFromJsonAsync<List<WeatherOverview>>("/api/weatherOf/years");
+        if (_weatherOfYears.Count > 0)
+        {
+            avgTempMax = _weatherOfYears.Max(s => s.AvgTemp);
+        }
     }
 
-    void HandleValidSubmit()
+    async void HandleValidSubmit()
     {
-        _weatherOfYears = _weatherHelper.GetWeatherOfPastYears(_formResponse.Location);
+        _weatherOfYears = await Http.GetFromJsonAsync<List<WeatherOverview>>($"/api/weatherOf/years?location={_formResponse.Location}");
+        if (_weatherOfYears.Count > 0)
+        {
+            avgTempMax = _weatherOfYears.Max(s => s.AvgTemp);
+        }
     }
 }
