Added forms to front end pages to change data loaded on page

--- a/WeatherHistoryViewer.Web/Client/Pages/Index.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/Index.razor
@@ -26,7 +26,7 @@ else
         <tbody>
             @foreach (var overview in weatherOverviews)
             {
-                var backgroundColor = $"hsla({(overview.AvgTemp / avgTempMax - 1) * -1 * 240},100%,50%,0.5)";
+                var backgroundColor = $"hsla({Math.Round((overview.AvgTemp / avgTempMax - 1) * -1 * 240,0)},100%,50%,0.5)";
                 <tr>
                     <th>@overview.LocationName</th>
                     <th style="background-color:@backgroundColor">@overview.AvgTemp</th>
