--- a/WeatherHistoryViewer.Web/Client/Pages/WeatherOfWeek.razor
+++ b/WeatherHistoryViewer.Web/Client/Pages/WeatherOfWeek.razor
@@ -6,71 +6,35 @@
 @using System.Linq
 @inject HttpClient Http
 
-<EditForm Model="@_formResponse" OnValidSubmit="@HandleValidSubmit">
-    <DataAnnotationsValidator />
-    <ValidationSummary />
-    <p>
-        <label>
-            Location:
-            <InputText id="location" @bind-Value="_formResponse.Location" />
-        </label>
-    </p>
-    <p>
-        <label>
-            Date in week:
-            <InputText id="date" @bind-Value="_formResponse.Date" />
-        </label>
-    </p>
-    <button class="button" type="submit">Reload</button>
-</EditForm>
-
 @if (_weatherOfWeeks == null)
 {
     <p>
         <em>Loading...</em>
     </p>
 }
-else if (_weatherOfWeeks.Count == 0)
-{
-    <br />
-    <p>
-        <em>Nothing found! Please try again.</em>
-    </p>
-    <br />
-    <h4>Troubleshooting:</h4>
-    <p>
-        <b>Is your location one of the following?</b>
-    </p>
-    foreach (var location in new LocationHandler().GetAllLocationNames())
-    {
-        <p>
-            <em>@location</em>
-        </p>
-    }
-    <p>
-        <b>Is your Date something like this</b>
-    </p>
-    <p>
-        <em>MONTH-DAY</em>
-    </p>
-    <p>
-        <em>2-28</em>
-    </p>
-    <p>
-        <em>12-15</em>
-    </p>
-}
 else
 {
-    if (_weatherOfWeeks.Count > 0)
-    {
-        <h1>The weather of @_weatherOfWeeks.First().First().Date.Split("-")[1]-@_weatherOfWeeks.First().First().Date.Split("-")[2] in @_weatherOfWeeks.First().First().Location.Country, @_weatherOfWeeks.First().First().Location.Name</h1>
-    }
-    else
-    {
-        <h1>The weather of @_formResponse.Location</h1>
-    }
-    <br />
+<div class="form-style">
+    <div class="form-style-heading">Load weather data</div>
+    <p>
+        Currently loaded data for date @_formResponse.Date.ToString("MM/dd") in @_formResponse.Location
+    </p>
+    <EditForm Model="@_formResponse" OnValidSubmit="@HandleValidSubmit">
+        <DataAnnotationsValidator />
+        <ValidationSummary />
+        <label for="location"><span>Location <span class="required">*</span></span><input type="text" class="input-field" @bind-value="@_formResponse.Location" list="locationSearch" /></label>
+        <datalist id="locationSearch">
+            @foreach (var name in _locationNames)
+            {
+            <option>@name</option>
+            }
+        </datalist>
+        <label for="date"><span>Date <span class="required">*</span></span><InputDate @bind-Value="_formResponse.Date"></InputDate></label>
+
+        <label><span> </span><input type="submit" value="Load" /></label>
+    </EditForm>
+</div>
+
     @foreach (var prop in Enum.GetValues(typeof(DisplayedPropertys)))
     {
         @switch (prop)
@@ -105,58 +69,58 @@ else
             @for (int i = 0; i < _weatherOfWeeks.Count; i++)
             {
                 var week = _weatherOfWeeks[i];
-        <tr>
-            <th>@week.First().Date.Split("-")[0]</th>
-            @switch (prop)
-            {
-                case DisplayedPropertys.AvgTemp:
-                    @foreach (var day in week)
+                <tr>
+                    <th>@week.First().Date.Split("-")[0]</th>
+                    @switch (prop)
                     {
-                        <td>@day.AvgTemp</td>
+                        case DisplayedPropertys.AvgTemp:
+                            @foreach (var day in week)
+                            {
+                                <td>@day.AvgTemp</td>
+                            }
+                            @if (week.Count == 7)
+                            {
+                                var backgroundColor = $"hsla({Math.Round((avgTemps[i] / avgTempMax - 1) * -1 * 240,0)},100%,50%,0.5)";
+                                <td style="background-color:@backgroundColor">@avgTemps[i]</td>
+                            }
+                            break;
+                        case DisplayedPropertys.MaxTemp:
+                            @foreach (var day in week)
+                            {
+                                <td>@day.MaxTemp</td>
+                            }
+                            @if (week.Count == 7)
+                            {
+                                var backgroundColor = $"hsla({Math.Round((maxTemps[i] / maxTempMax - 1) * -1 * 240,0)},100%,50%,0.5)";
+                                <td style="background-color:@backgroundColor">@maxTemps[i]</td>
+                            }
+                            break;
+                        case DisplayedPropertys.MinTemp:
+                            @foreach (var day in week)
+                            {
+                                <td>@day.MinTemp</td>
+                            }
+                            @if (week.Count == 7)
+                            {
+                                var backgroundColor = $"hsla({Math.Round((minTemps[i] / minTempMax - 1) * -1 * 240,0)},100%,50%,0.5)";
+                                <td style="background-color:@backgroundColor">@minTemps[i]</td>
+                            }
+                            break;
+                        case DisplayedPropertys.SunHours:
+                            @foreach (var day in week)
+                            {
+                                <td>@day.SunHour</td>
+                            }
+                            @if (week.Count == 7)
+                            {
+                                var backgroundColor = $"hsla({Math.Round((sunHours[i] / sunHoursMax - 1) * -1 * 240,0)},100%,50%,0.5)";
+                                <td style="background-color:@backgroundColor">@sunHours[i]</td>
+                            }
+                            break;
+                        default:
+                            break;
                     }
-                    @if (week.Count == 7)
-                    {
-                        var backgroundColor = $"hsla({(avgTemps[i] / avgTempMax - 1) * -1 * 240},100%,50%,0.5)";
-        <td style="background-color:@backgroundColor">@avgTemps[i]</td>
-                    }
-                    break;
-                case DisplayedPropertys.MaxTemp:
-                    @foreach (var day in week)
-                    {
-                        <td>@day.MaxTemp</td>
-                    }
-                    @if (week.Count == 7)
-                    {
-                        var backgroundColor = $"hsla({(maxTemps[i] / maxTempMax - 1) * -1 * 240},100%,50%,0.5)";
-        <td style="background-color:@backgroundColor">@maxTemps[i]</td>
-                    }
-                    break;
-                case DisplayedPropertys.MinTemp:
-                    @foreach (var day in week)
-                    {
-                        <td>@day.MinTemp</td>
-                    }
-                    @if (week.Count == 7)
-                    {
-                        var backgroundColor = $"hsla({(minTemps[i] / minTempMax - 1) * -1 * 240},100%,50%,0.5)";
-                        <td style="background-color:@backgroundColor">@minTemps[i]</td>
-                    }
-                    break;
-                case DisplayedPropertys.SunHours:
-                    @foreach (var day in week)
-                    {
-                        <td>@day.SunHour</td>
-                    }
-                    @if (week.Count == 7)
-                    {
-                        var backgroundColor = $"hsla({(sunHours[i] / sunHoursMax - 1) * -1 * 240},100%,50%,0.5)";
-        <td style="background-color:@backgroundColor">@sunHours[i]</td>
-                    }
-                    break;
-                default:
-                    break;
-            }
-        </tr>
+                </tr>
             }
         </table>
         <br />
@@ -179,6 +143,8 @@ else
     private readonly FormResponse _formResponse = new();
 
     private List<List<HistoricalWeather>> _weatherOfWeeks;
+    private List<string> _locationNames;
+
     private List<double> avgTemps = new();
     private List<double> maxTemps = new();
     private List<double> minTemps = new();
@@ -191,6 +157,10 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        _formResponse.Location = "Amsterdam";
+        _formResponse.Date = DateTime.Today;
+
+        _locationNames = await Http.GetFromJsonAsync<List<string>>("/api/location/getLocationNames");
         _weatherOfWeeks = await Http.GetFromJsonAsync<List<List<HistoricalWeather>>>("/api/weatherOf/weeks");
 
         _weatherOfWeeks.ForEach(w =>
@@ -208,6 +178,6 @@ else
 
     async void HandleValidSubmit()
     {
-        _weatherOfWeeks = await Http.GetFromJsonAsync<List<List<HistoricalWeather>>>($"/api/weatherOf/weeks?location={_formResponse.Location}&date={_formResponse.Date}");
+        _weatherOfWeeks = await Http.GetFromJsonAsync<List<List<HistoricalWeather>>>($"/api/weatherOf/weeks?location={_formResponse.Location}&date={_formResponse.Date.ToString("yyyy/MM/dd")}");
     }
 }
