--- a/WeatherHistoryViewer.Web/Client/Shared/NavMenu.razor
+++ b/WeatherHistoryViewer.Web/Client/Shared/NavMenu.razor
@@ -25,13 +25,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="weatherOfDays">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather of days
+            <NavLink class="nav-link" href="weatherOfDay">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather of day
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="downloadNewData">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Download new data
+            <NavLink class="nav-link" href="AddWeatherData">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Add weather data
             </NavLink>
         </li>
     </ul>
