--- a/WeatherHistoryViewer.Web/Client/wwwroot/css/app.css
+++ b/WeatherHistoryViewer.Web/Client/wwwroot/css/app.css
@@ -48,3 +48,98 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+.form-style {
+    max-width: 500px;
+    padding: 20px 12px 10px 20px;
+    font: 13px Arial, Helvetica, sans-serif;
+    background: #f4f7f8;
+    padding: 20px;
+    margin-bottom: 50px;
+    background: #f4f7f8;
+    border-radius: 8px;
+}
+
+.form-style-heading {
+    font-weight: bold;
+    font-style: italic;
+    border-bottom: 2px solid #ddd;
+    margin-bottom: 20px;
+    font-size: 20px;
+    padding-bottom: 3px;
+}
+
+.form-style label {
+    display: block;
+    margin: 0px 0px 15px 0px;
+}
+
+    .form-style label > span {
+        width: 100px;
+        font-weight: bold;
+        float: left;
+        padding-top: 8px;
+        padding-right: 5px;
+    }
+
+.form-style span.required {
+    color: red;
+}
+
+.form-style .tel-number-field {
+    width: 40px;
+    text-align: center;
+}
+
+.form-style input.input-field, .form-style .select-field {
+    width: 48%;
+}
+
+.form-style input.input-field,
+.form-style .tel-number-field,
+.form-style .textarea-field,
+.form-style .select-field {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    border: 1px solid #C2C2C2;
+    box-shadow: 1px 1px 4px #EBEBEB;
+    -moz-box-shadow: 1px 1px 4px #EBEBEB;
+    -webkit-box-shadow: 1px 1px 4px #EBEBEB;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    padding: 7px;
+    outline: none;
+}
+
+    .form-style .input-field:focus,
+    .form-style .tel-number-field:focus,
+    .form-style .textarea-field:focus,
+    .form-style .select-field:focus {
+        border: 1px solid #0C0;
+    }
+
+.form-style .textarea-field {
+    height: 100px;
+    width: 55%;
+}
+
+.form-style input[type=submit],
+.form-style input[type=button] {
+    border: none;
+    padding: 8px 15px 8px 15px;
+    background: #FF8500;
+    color: #fff;
+    box-shadow: 1px 1px 4px #DADADA;
+    -moz-box-shadow: 1px 1px 4px #DADADA;
+    -webkit-box-shadow: 1px 1px 4px #DADADA;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+}
+
+    .form-style input[type=submit]:hover,
+    .form-style input[type=button]:hover {
+        background: #EA7B00;
+        color: #fff;
+    }
